--- a/resume.html
+++ b/resume.html
@@ -175,8 +175,8 @@
       </div>
 
       <div class="cv-buttons">
-        <a class="cv-button" href="Kavitha_Lingarajegowda_Resume.pdf" target="_blank">View CV</a>
-        <a class="cv-button primary" href="Kavitha_Lingarajegowda_Resume.pdf" download>Download CV</a>
+        <a class="cv-button" href="/Kavitha_Lingarajegowda_Resume_2026.pdf" target="_blank">View CV</a>
+        <a class="cv-button primary" href="/Kavitha_Lingarajegowda_Resume_2026.pdf" download>Download CV</a>
       </div>
     </header>
 
@@ -189,10 +189,10 @@
 
       <div class="experience-points">
         <ul>
-          <li>Built an end-to-end Python-based LLM grading and feedback system for 300+ real exam responses, replacing manual evaluation workflows.</li>
-          <li>Achieved ~96% exact agreement with human graders on structured exam tasks, demonstrating consistent and scalable evaluation behavior.</li>
-          <li>Engineered agent-driven evaluation pipelines with fully deterministic outputs, ensuring reproducible and auditable results.</li>
-          <li>Implemented Retrieval-Augmented Generation using lecture materials and rubrics to ground model reasoning and reduce ambiguity.</li>
+          <li>Built an end-to-end Python-based LLM grading system for 300+ real exam responses</li>
+          <li>Achieved ~96% agreement with human graders on structured evaluation tasks</li>
+          <li>Engineered deterministic, agent-driven evaluation pipelines for reproducible results</li>
+          <li>Implemented RAG using lecture material and rubrics to ground model reasoning</li>
         </ul>
       </div>
     </section>
@@ -206,10 +206,10 @@
 
       <div class="experience-points">
         <ul>
-          <li>Designed Python-based evaluation workflows to analyze LLM behavior on 1000+ real Computer Vision exam responses.</li>
-          <li>Iteratively engineered and validated 12 prompt variants, improving instruction-following accuracy through structured experimentation.</li>
-          <li>Built an evaluation harness combining quantitative metrics and qualitative error analysis to diagnose failure modes.</li>
-          <li>Benchmarked three foundation models by analyzing response patterns and prompt sensitivity to support informed model selection.</li>
+          <li>Designed Python-based workflows to analyze LLM behavior on 1000+ exam responses</li>
+          <li>Engineered and validated 12 prompt variants to improve instruction-following accuracy</li>
+          <li>Built an evaluation harness combining metrics with qualitative error analysis</li>
+          <li>Benchmarked three foundation models to support informed model selection</li>
         </ul>
       </div>
     </section>
@@ -223,10 +223,10 @@
 
       <div class="experience-points">
         <ul>
-          <li>Built Python-based data processing and ETL workflows to prepare structured datasets, improving data accuracy by 40%.</li>
-          <li>Debugged and stabilized backend and API-driven modules, reducing recurring pipeline failures by 20%.</li>
-          <li>Collaborated with senior engineers to refine requirements, optimize data paths, and improve system scalability.</li>
-          <li>Supported agile development cycles through testing, validation, and technical documentation.</li>
+          <li>Developed Python-based ETL pipelines to prepare structured datasets</li>
+          <li>Stabilized backend and API-driven modules to reduce recurring failures</li>
+          <li>Collaborated with senior engineers to improve performance and scalability</li>
+          <li>Supported agile development through testing and technical documentation</li>
         </ul>
       </div>
     </section>
