--- a/resume.html
+++ b/resume.html
@@ -175,8 +175,21 @@
       </div>
 
       <div class="cv-buttons">
-        <a class="cv-button" href="/Kavitha_Lingarajegowda_Resume_2026.pdf" target="_blank">View CV</a>
-        <a class="cv-button primary" href="/Kavitha_Lingarajegowda_Resume_2026.pdf" download>Download CV</a>
+        <a
+  class="cv-button"
+  href="/Kavitha_Lingarajegowda_Resume_2026.pdf"
+  target="_blank"
+  rel="noopener"
+>
+  View CV
+</a>
+        <a
+  class="cv-button primary"
+  href="/Kavitha_Lingarajegowda_Resume_2026.pdf"
+  download
+>
+  Download CV
+</a>
       </div>
     </header>
 
