--- a/projects.html
+++ b/projects.html
@@ -8,154 +8,164 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    body.portfolio-page {
-      overflow-y: auto;
-    }
+  body.portfolio-page {
+    overflow-y: auto;
+  }
 
-    main.portfolio-page {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 160px 20px 120px;
-    }
+  main.portfolio-page {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 160px 20px 120px;
+  }
 
-    /* =========================
-       HEADER
-       ========================= */
+  /* =========================
+     HEADER
+     ========================= */
+
+  .projects-header h1 {
+    font-size: 42px;
+    color: #4a3b78;
+    margin-bottom: 8px;
+  }
+
+  .projects-header p {
+    font-size: 16px;
+    color: #5b4b8a;
+    margin-bottom: 56px;
+  }
+
+  /* =========================
+     PROJECT CARD
+     ========================= */
+
+  .project-card {
+    display: grid;
+    grid-template-columns: 1.4fr 1fr;
+    gap: 36px;
+    background: rgba(255, 255, 255, 0.95);
+    border: 1px solid rgba(91, 75, 138, 0.22);
+    border-radius: 18px;
+    padding: 36px 40px;
+    margin-bottom: 48px;
+    box-shadow: 0 18px 36px rgba(0,0,0,0.08);
+  }
+
+  .project-title {
+    font-size: 22px;
+    font-weight: 600;
+    color: #000;
+    margin-bottom: 6px;
+  }
+
+  .project-stack {
+    font-size: 14px;
+    color: #5b4b8a;
+    margin-bottom: 16px;
+  }
+
+  .project-description {
+    font-size: 16px;
+    color: #000;
+    line-height: 1.6;
+    margin-bottom: 18px;
+    max-width: 620px;
+  }
+
+  /* =========================
+     ARCHITECTURE TOGGLE
+     ========================= */
+
+  .architecture-toggle {
+    font-size: 14px;
+    color: #4a3b78;
+    cursor: pointer;
+    margin-bottom: 10px;
+    display: inline-block;
+    font-weight: 600;
+  }
+
+  .architecture {
+    display: none;
+    font-size: 14px;
+    color: #2b2b2b;
+    line-height: 1.6;
+    margin-top: 6px;
+  }
+
+  /* =========================
+     IMPACT
+     ========================= */
+
+  .impact h4 {
+    font-size: 13px;
+    letter-spacing: 0.1em;
+    color: #4a3b78;
+    margin-bottom: 12px;
+  }
+
+  .impact-title {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .impact-title::before {
+    content: "↗";
+    font-size: 14px;
+    color: #6b6df6;
+  }
+
+  .impact ul {
+    padding-left: 18px;
+    margin-bottom: 20px;
+  }
+
+  .impact li {
+    font-size: 15px;
+    color: #000;
+    margin-bottom: 8px;
+    line-height: 1.4;
+  }
+
+  .view-code {
+    display: inline-block;
+    padding: 10px 18px;
+    border-radius: 999px;
+    background: #6b6df6;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  /* =========================
+     MOBILE
+     ========================= */
+
+  @media (max-width: 900px) {
+    .project-card {
+      grid-template-columns: 1fr;
+      padding: 28px;
+    }
 
     .projects-header h1 {
-      font-size: 42px;
-      color: #4a3b78;
-      margin-bottom: 8px;
+      font-size: 30px;
     }
+  }
 
-    .projects-header p {
-      font-size: 16px;
-      color: #5b4b8a;
-      margin-bottom: 56px;
-    }
+  /* =========================
+     Z-INDEX FIX (NAV OVERRIDE)
+     ========================= */
 
-    /* =========================
-       CARD
-       ========================= */
+  .hamburger {
+    z-index: 9999 !important;
+  }
 
-    .project-card {
-      display: grid;
-      grid-template-columns: 1.4fr 1fr;
-      gap: 36px;
-      background: rgba(255, 255, 255, 0.95);
-      border: 1px solid rgba(91, 75, 138, 0.22);
-      border-radius: 18px;
-      padding: 36px 40px;
-      margin-bottom: 48px;
-      box-shadow: 0 18px 36px rgba(0,0,0,0.08);
-    }
+  .mobile-menu {
+    z-index: 9998;
+  }
+</style>
 
-    .project-title {
-      font-size: 22px;
-      font-weight: 600;
-      color: #000;
-      margin-bottom: 6px;
-    }
-
-    .project-stack {
-      font-size: 14px;
-      color: #5b4b8a;
-      margin-bottom: 16px;
-    }
-
-    .project-description {
-      font-size: 16px;
-      color: #000;
-      line-height: 1.6;
-      margin-bottom: 18px;
-      max-width: 620px;
-    }
-
-    /* =========================
-       ARCHITECTURE
-       ========================= */
-
-    .architecture-toggle {
-      font-size: 14px;
-      color: #4a3b78;
-      cursor: pointer;
-      margin-bottom: 10px;
-      display: inline-block;
-      font-weight: 600;
-    }
-
-    .architecture {
-      display: none;
-      font-size: 14px;
-      color: #2b2b2b;
-      line-height: 1.6;
-      margin-top: 6px;
-    }
-
-    /* =========================
-       IMPACT
-       ========================= */
-
-
-.impact h4 {
-  font-size: 13px;
-  letter-spacing: 0.1em;
-  color: #4a3b78;
-  margin-bottom: 12px;
-}
-
-/* 🔹 ADD THIS BLOCK */
-.impact-title {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.impact-title::before {
-  content: "↗";
-  font-size: 14px;
-  color: #6b6df6;
-}
-
-
-    .impact ul {
-      padding-left: 18px;
-      margin-bottom: 20px;
-    }
-
-    .impact li {
-      font-size: 15px;
-      color: #000;
-      margin-bottom: 8px;
-      line-height: 1.4;
-    }
-
-    .view-code {
-      display: inline-block;
-      padding: 10px 18px;
-      border-radius: 999px;
-      background: #6b6df6;
-      color: #fff;
-      text-decoration: none;
-      font-size: 14px;
-      font-weight: 600;
-    }
-
-    /* =========================
-       MOBILE
-       ========================= */
-
-    @media (max-width: 900px) {
-      .project-card {
-        grid-template-columns: 1fr;
-        padding: 28px;
-      }
-
-      .projects-header h1 {
-        font-size: 30px;
-      }
-    }
-  </style>
 </head>
 
 <body class="portfolio-page">
