--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   </head>
 
   <body class="home-page">
+    <!-- Mobile nav -->
     <button class="hamburger" id="hamburger">☰</button>
 
     <aside class="mobile-menu" id="mobileMenu">
       <button class="close" id="closeMenu">×</button>
       <a href="index.html">Home</a>
       <a href="skills.html">Skills</a>
-      <a href="portfolio.html">Projects</a>
-      <a href="achievements.html">Certifications</a>
+      <a href="projects.html">Projects</a>
+      <a href="certifications.html">Certifications</a>
       <a href="resume.html">Experience</a>
       <a href="education.html">Education</a>
+      <a href="contact.html">Contact</a>
     </aside>
 
-
+    <!-- Desktop nav -->
     <nav class="desktop-nav">
       <div class="nav-inner">
         <div class="nav-left">
@@ -31,15 +33,16 @@
         <div class="nav-right">
           <a href="index.html">Home</a>
           <a href="skills.html">Skills</a>
-          <a href="portfolio.html">Projects</a>
-          <a href="achievements.html">Certifications</a>
+          <a href="projects.html">Projects</a>
+          <a href="certifications.html">Certifications</a>
           <a href="resume.html">Experience</a>
           <a href="education.html">Education</a>
+          <a href="contact.html">Contact</a>
         </div>
-
       </div>
     </nav>
 
+    <!-- Hero -->
     <main class="hero">
       <div class="hero-content">
         <span class="hero-badge">Open to 2026 New Grad & Early Career Roles</span>
@@ -55,11 +58,12 @@
           complex ideas into real-world impact.
         </p>
 
+        <!-- CTA -->
         <a href="contact.html" class="cta">Get in Touch</a>
 
         <div class="hero-socials">
-          <a href="https://github.com/kav-gowda" target="_blank">GitHub</a>
-          <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/kav-gowda" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </div>
       </div>
 
@@ -68,7 +72,7 @@
       </div>
     </main>
 
-
+    <!-- Mobile menu script -->
     <script>
       const hamburger = document.getElementById("hamburger");
       const mobileMenu = document.getElementById("mobileMenu");
