--- a/projects.html
+++ b/projects.html
@@ -8,164 +8,160 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-  body.portfolio-page {
-    overflow-y: auto;
-  }
-
-  main.portfolio-page {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 160px 20px 120px;
-  }
-
-  /* =========================
-     HEADER
-     ========================= */
-
-  .projects-header h1 {
-    font-size: 42px;
-    color: #4a3b78;
-    margin-bottom: 8px;
-  }
-
-  .projects-header p {
-    font-size: 16px;
-    color: #5b4b8a;
-    margin-bottom: 56px;
-  }
-
-  /* =========================
-     PROJECT CARD
-     ========================= */
-
-  .project-card {
-    display: grid;
-    grid-template-columns: 1.4fr 1fr;
-    gap: 36px;
-    background: rgba(255, 255, 255, 0.95);
-    border: 1px solid rgba(91, 75, 138, 0.22);
-    border-radius: 18px;
-    padding: 36px 40px;
-    margin-bottom: 48px;
-    box-shadow: 0 18px 36px rgba(0,0,0,0.08);
-  }
-
-  .project-title {
-    font-size: 22px;
-    font-weight: 600;
-    color: #000;
-    margin-bottom: 6px;
-  }
-
-  .project-stack {
-    font-size: 14px;
-    color: #5b4b8a;
-    margin-bottom: 16px;
-  }
-
-  .project-description {
-    font-size: 16px;
-    color: #000;
-    line-height: 1.6;
-    margin-bottom: 18px;
-    max-width: 620px;
-  }
-
-  /* =========================
-     ARCHITECTURE TOGGLE
-     ========================= */
-
-  .architecture-toggle {
-    font-size: 14px;
-    color: #4a3b78;
-    cursor: pointer;
-    margin-bottom: 10px;
-    display: inline-block;
-    font-weight: 600;
-  }
-
-  .architecture {
-    display: none;
-    font-size: 14px;
-    color: #2b2b2b;
-    line-height: 1.6;
-    margin-top: 6px;
-  }
-
-  /* =========================
-     IMPACT
-     ========================= */
-
-  .impact h4 {
-    font-size: 13px;
-    letter-spacing: 0.1em;
-    color: #4a3b78;
-    margin-bottom: 12px;
-  }
-
-  .impact-title {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  .impact-title::before {
-    content: "↗";
-    font-size: 14px;
-    color: #6b6df6;
-  }
-
-  .impact ul {
-    padding-left: 18px;
-    margin-bottom: 20px;
-  }
-
-  .impact li {
-    font-size: 15px;
-    color: #000;
-    margin-bottom: 8px;
-    line-height: 1.4;
-  }
-
-  .view-code {
-    display: inline-block;
-    padding: 10px 18px;
-    border-radius: 999px;
-    background: #6b6df6;
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 600;
-  }
-
-  /* =========================
-     MOBILE
-     ========================= */
-
-  @media (max-width: 900px) {
-    .project-card {
-      grid-template-columns: 1fr;
-      padding: 28px;
+    body.portfolio-page {
+      overflow-y: auto;
     }
+
+    main.portfolio-page {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 160px 20px 120px;
+    }
+
+    /* =========================
+       HEADER
+       ========================= */
 
     .projects-header h1 {
-      font-size: 30px;
+      font-size: 42px;
+      color: #4a3b78;
+      margin-bottom: 8px;
     }
-  }
 
-  /* =========================
-     Z-INDEX FIX (NAV OVERRIDE)
-     ========================= */
+    .projects-header p {
+      font-size: 16px;
+      color: #5b4b8a;
+      margin-bottom: 56px;
+    }
 
-  .hamburger {
-    z-index: 9999 !important;
-  }
+    /* =========================
+       PROJECT CARD
+       ========================= */
 
-  .mobile-menu {
-    z-index: 9998;
-  }
-</style>
+    .project-card {
+      display: grid;
+      grid-template-columns: 1.4fr 1fr;
+      gap: 36px;
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid rgba(91, 75, 138, 0.22);
+      border-radius: 18px;
+      padding: 36px 40px;
+      margin-bottom: 48px;
+      box-shadow: 0 18px 36px rgba(0,0,0,0.08);
+    }
 
+    .project-title {
+      font-size: 22px;
+      font-weight: 600;
+      color: #000;
+      margin-bottom: 6px;
+    }
+
+    .project-stack {
+      font-size: 14px;
+      color: #5b4b8a;
+      margin-bottom: 16px;
+    }
+
+    .project-description {
+      font-size: 16px;
+      color: #000;
+      line-height: 1.6;
+      margin-bottom: 18px;
+      max-width: 620px;
+    }
+
+    /* =========================
+       ARCHITECTURE
+       ========================= */
+
+    .architecture-toggle {
+      font-size: 14px;
+      color: #4a3b78;
+      cursor: pointer;
+      margin-bottom: 10px;
+      display: inline-block;
+      font-weight: 600;
+    }
+
+    .architecture {
+      display: none;
+      font-size: 14px;
+      color: #2b2b2b;
+      line-height: 1.6;
+      margin-top: 6px;
+    }
+
+    /* =========================
+       IMPACT
+       ========================= */
+
+    .impact h4 {
+      font-size: 13px;
+      letter-spacing: 0.1em;
+      color: #4a3b78;
+      margin-bottom: 12px;
+    }
+
+    .impact-title {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .impact-title::before {
+      content: "↗";
+      font-size: 14px;
+      color: #6b6df6;
+    }
+
+    .impact ul {
+      padding-left: 18px;
+      margin-bottom: 20px;
+    }
+
+    .impact li {
+      font-size: 15px;
+      color: #000;
+      margin-bottom: 8px;
+      line-height: 1.4;
+    }
+
+    .view-code {
+      display: inline-block;
+      padding: 10px 18px;
+      border-radius: 999px;
+      background: #6b6df6;
+      color: #fff;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    /* =========================
+       MOBILE
+       ========================= */
+
+    @media (max-width: 900px) {
+      .project-card {
+        grid-template-columns: 1fr;
+        padding: 28px;
+      }
+
+      .projects-header h1 {
+        font-size: 30px;
+      }
+    }
+
+    /* Ensure nav overlays content */
+    .hamburger {
+      z-index: 9999 !important;
+    }
+
+    .mobile-menu {
+      z-index: 9998;
+    }
+  </style>
 </head>
 
 <body class="portfolio-page">
@@ -177,8 +173,8 @@
     <button class="close" id="closeMenu">×</button>
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
-    <a href="portfolio.html">Projects</a>
-    <a href="achievements.html">Certifications</a>
+    <a href="projects.html">Projects</a>
+    <a href="certifications.html">Certifications</a>
     <a href="resume.html">Experience</a>
     <a href="education.html">Education</a>
   </aside>
@@ -193,8 +189,8 @@
       <div class="nav-right">
         <a href="index.html">Home</a>
         <a href="skills.html">Skills</a>
-        <a href="portfolio.html">Projects</a>
-        <a href="achievements.html">Certifications</a>
+        <a href="projects.html">Projects</a>
+        <a href="certifications.html">Certifications</a>
         <a href="resume.html">Experience</a>
         <a href="education.html">Education</a>
       </div>
@@ -220,8 +216,8 @@
 
         <div class="architecture-toggle" onclick="toggleArch(this)">⌄ Show Architecture</div>
         <div class="architecture">
-          LangGraph workflows → routing & conditional nodes → parallel execution
-          → state graph orchestration → deterministic agent output
+          LangGraph workflows → routing & conditional nodes → parallel execution →
+          state graph orchestration → deterministic agent output
         </div>
       </div>
 
@@ -248,17 +244,17 @@
 
         <div class="architecture-toggle" onclick="toggleArch(this)">⌄ Show Architecture</div>
         <div class="architecture">
-          Web ingestion → text chunking & embeddings → vector retrieval
-          → context filtering → Llama 3.1 response generation
+          Web ingestion → chunking & embeddings → vector retrieval →
+          context filtering → Llama 3.1 generation
         </div>
       </div>
 
       <div class="impact">
-        <h4>IMPACT</h4>
+        <h4 class="impact-title">IMPACT</h4>
         <ul>
-          <li>Reduces hallucinations through strict context grounding</li>
+          <li>Reduces hallucinations through strict grounding</li>
           <li>Supports real-time knowledge updates</li>
-          <li>Scalable RAG design for web-scale data</li>
+          <li>Scalable RAG for web-scale data</li>
         </ul>
         <a class="view-code" href="https://github.com/Kav-Gowda/Web-Scale_RAG_Pipeline" target="_blank">View Code</a>
       </div>
@@ -270,25 +266,24 @@
         <div class="project-title">Secure Document Summarization using RAG</div>
         <div class="project-stack">LangChain · Granite LLM · Secure Retrieval</div>
         <div class="project-description">
-          A secure document retrieval and summarization pipeline designed for
-          confidential data access.
+          Secure document retrieval and summarization for confidential data workflows.
         </div>
 
         <div class="architecture-toggle" onclick="toggleArch(this)">⌄ Show Architecture</div>
         <div class="architecture">
-          Document ingestion → chunking & embeddings → access-controlled retrieval
-          → Granite LLM summarization
+          Document ingestion → embeddings → access-controlled retrieval →
+          Granite LLM summarization
         </div>
       </div>
 
       <div class="impact">
-        <h4>IMPACT</h4>
+        <h4 class="impact-title">IMPACT</h4>
         <ul>
-          <li>Prevents data leakage in conversational workflows</li>
-          <li>Enterprise-grade document security</li>
-          <li>Reliable grounded summarization</li>
+          <li>Prevents data leakage</li>
+          <li>Enterprise-grade access control</li>
+          <li>Grounded summaries</li>
         </ul>
-        <a class="view-code" href="https://github.com/Kav-Gowda/Secure_Document_Summarization_using_RAG/blob/main/README.md" target="_blank">View Code</a>
+        <a class="view-code" href="https://github.com/Kav-Gowda/Secure_Document_Summarization_using_RAG" target="_blank">View Code</a>
       </div>
     </div>
 
@@ -298,22 +293,21 @@
         <div class="project-title">Agentic Math Assistant with Tool Calling</div>
         <div class="project-stack">LangChain · LangGraph · Tool Calling</div>
         <div class="project-description">
-          An intelligent math agent capable of structured tool selection and
-          multi-step reasoning.
+          Structured math agent with deterministic tool execution.
         </div>
 
         <div class="architecture-toggle" onclick="toggleArch(this)">⌄ Show Architecture</div>
         <div class="architecture">
-          Natural language input → intent parsing → tool selection
-          → arithmetic execution → validated response
+          NL input → intent parsing → tool selection →
+          arithmetic execution → validated output
         </div>
       </div>
 
       <div class="impact">
-        <h4>IMPACT</h4>
+        <h4 class="impact-title">IMPACT</h4>
         <ul>
-          <li>Reliable OpenAI-style tool calling</li>
-          <li>Schema-validated agent outputs</li>
+          <li>Reliable tool invocation</li>
+          <li>Schema-validated responses</li>
           <li>Tested for correctness</li>
         </ul>
         <a class="view-code" href="https://github.com/Kav-Gowda/agentic-math-assistant-tool-calling-langchain" target="_blank">View Code</a>
@@ -326,23 +320,22 @@
         <div class="project-title">Visual Data Inspect AI</div>
         <div class="project-stack">Computer Vision · Industrial ML · Automation</div>
         <div class="project-description">
-          A machine learning-based visual inspection system for detecting
-          manufacturing defects.
+          ML-powered visual inspection system for manufacturing quality control.
         </div>
 
         <div class="architecture-toggle" onclick="toggleArch(this)">⌄ Show Architecture</div>
         <div class="architecture">
-          Image ingestion → preprocessing → feature extraction
-          → defect classification → inspection output
+          Image ingestion → preprocessing → feature extraction →
+          defect classification → inspection output
         </div>
       </div>
 
       <div class="impact">
-        <h4>IMPACT</h4>
+        <h4 class="impact-title">IMPACT</h4>
         <ul>
-          <li>Bridges computer vision with industrial automation</li>
-          <li>Supports scalable quality inspection</li>
-          <li>Applied ML beyond language models</li>
+          <li>Automates defect detection</li>
+          <li>Scales industrial inspection</li>
+          <li>Applies ML beyond NLP</li>
         </ul>
         <a class="view-code" href="https://github.com/Kav-Gowda/VisualDataInspect-AI" target="_blank">View Code</a>
       </div>
@@ -360,8 +353,30 @@
         arch.style.display = "block";
         el.textContent = "^ Hide Architecture";
       }
-
     }
+
+    const hamburger = document.getElementById("hamburger");
+    const mobileMenu = document.getElementById("mobileMenu");
+    const closeMenu = document.getElementById("closeMenu");
+
+    hamburger.addEventListener("click", (e) => {
+      e.stopPropagation();
+      mobileMenu.classList.toggle("open");
+    });
+
+    closeMenu.addEventListener("click", () => {
+      mobileMenu.classList.remove("open");
+    });
+
+    document.addEventListener("click", (e) => {
+      if (
+        mobileMenu.classList.contains("open") &&
+        !mobileMenu.contains(e.target) &&
+        e.target !== hamburger
+      ) {
+        mobileMenu.classList.remove("open");
+      }
+    });
   </script>
 
 </body>
