--- a/certifications.html
+++ b/certifications.html
@@ -112,7 +112,7 @@
   </style>
 </head>
 
-<body class="achievements-page">
+<body class="certifications-page">
 
   <!-- Mobile nav -->
   <button class="hamburger" id="hamburger">☰</button>
