--- a/certifications.html
+++ b/certifications.html
@@ -34,7 +34,7 @@
     }
 
     h1 {
-      font-family: "Cinzel", serif;
+      font-family: inherit;
       font-size: 36px;
       margin-bottom: 72px;
       color: #6b5ca5;
@@ -45,7 +45,7 @@
     }
 
     .month-title {
-      font-family: "Cinzel", serif;
+      font-family: inherit;
       font-size: 22px;
       color: #6b5ca5;
       margin-bottom: 40px;
